--- a/src/components/shared/PricingSection.astro
+++ b/src/components/shared/PricingSection.astro
@@ -126,12 +126,12 @@
       <p class="mt-4 flex items-baseline gap-x-2">
         <span class="text-5xl font-semibold tracking-tight text-primary-foreground">$99</span
         >
-        <span class="text-base text-muted-foreground">/month</span>
+        <span class="text-base text-primary-foreground">/month</span>
       </p>
-      <p class="mt-6 text-base/7 text-muted-foreground">
+      <p class="mt-6 text-base/7 text-primary-foreground">
         Dedicated support and infrastructure for your company.
       </p>
-      <ul role="list" class="mt-8 space-y-3 text-sm/6 text-muted-foreground sm:mt-10">
+      <ul role="list" class="mt-8 space-y-3 text-sm/6 text-primary-foreground sm:mt-10">
         <li class="flex gap-x-3">
           <svg
             viewBox="0 0 20 20"
