--- a/src/components/shared/HeroSection.astro
+++ b/src/components/shared/HeroSection.astro
@@ -6,12 +6,12 @@ const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
 ---
 
-<div class="bg-background">
+<div class="bg-background min-h-screen flex flex-col">
   <Navbar />
 
-  <div class="relative">
-    <div class="mx-auto max-w-7xl">
-      <div class="relative z-10 pt-14 lg:w-full lg:max-w-2xl">
+  <div class="relative flex-1 flex">
+    <div class="mx-auto max-w-7xl w-full flex">
+      <div class="relative z-10 pt-14 lg:w-full lg:max-w-2xl flex flex-col justify-center">
         <svg
           viewBox="0 0 100 100"
           preserveAspectRatio="none"
@@ -59,11 +59,11 @@ const t = useTranslations(lang);
         </div>
       </div>
     </div>
-    <div class="bg-muted lg:absolute lg:inset-y-0 lg:right-0 lg:w-1/2">
+    <div class="bg-muted lg:absolute lg:inset-y-0 lg:right-0 lg:w-1/2 flex items-center justify-center">
       <img
         src="https://images.unsplash.com/photo-1483389127117-b6a2102724ae?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1587&q=80"
         alt=""
-        class="aspect-3/2 object-cover lg:aspect-auto lg:size-full"
+        class="aspect-3/2 object-cover lg:aspect-auto lg:h-full lg:w-full"
       />
     </div>
   </div>
