--- a/src/components/shared/Navbar.astro
+++ b/src/components/shared/Navbar.astro
@@ -21,7 +21,7 @@ if (user) {
 }
 ---
 
-<header class="absolute inset-x-0 top-0 z-50">
+<header class="absolute inset-x-0 top-0 z-50 bg-white/90 backdrop-blur-sm">
   <div class="mx-auto max-w-7xl">
     <div class="px-6 pt-6 lg:px-8">
       <nav
